--- a/ios/todolist.xcodeproj/xcshareddata/xcschemes/DEV.xcscheme
+++ b/ios/todolist.xcodeproj/xcshareddata/xcschemes/DEV.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1340"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "todolist.app"
-               BlueprintName = "todolist"
+               BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
+               BuildableName = "DEV.app"
+               BlueprintName = "DEV"
                ReferencedContainer = "container:todolist.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "todolistTests.xctest"
-               BlueprintName = "todolistTests"
-               ReferencedContainer = "container:todolist.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -54,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "todolist.app"
-            BlueprintName = "todolist"
+            BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
+            BuildableName = "DEV.app"
+            BlueprintName = "DEV"
             ReferencedContainer = "container:todolist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "todolist.app"
-            BlueprintName = "todolist"
+            BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
+            BuildableName = "DEV.app"
+            BlueprintName = "DEV"
             ReferencedContainer = "container:todolist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
