--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'todolist' do
+def default_pods
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -19,19 +19,22 @@ target 'todolist' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'todolistTests' do
-    inherit! :complete
-    # Pods for testing
-  end
-
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
   use_flipper!()
 
-  post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
+  # post_install do |installer|
+  #   react_native_post_install(installer)
+  #   __apply_Xcode_12_5_M1_post_install_workaround(installer)
+  # end
+end
+
+target 'DEV' do
+  default_pods
+end
+
+target 'PROD' do
+  default_pods
 end
