--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "rxjs": "^7.5.5",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
