--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
     "rxjs": "^7.5.5",
     "tsyringe": "^4.6.0"
   },
