--- a/ios/todolist.xcodeproj/xcshareddata/xcschemes/DEV.xcscheme
+++ b/ios/todolist.xcodeproj/xcshareddata/xcschemes/DEV.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
-               BuildableName = "DEV.app"
+               BuildableName = "ToDoList DEV.app"
                BlueprintName = "DEV"
                ReferencedContainer = "container:todolist.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
-            BuildableName = "DEV.app"
+            BuildableName = "ToDoList DEV.app"
             BlueprintName = "DEV"
             ReferencedContainer = "container:todolist.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A7C13D78283951AD005E5FE1"
-            BuildableName = "DEV.app"
+            BuildableName = "ToDoList DEV.app"
             BlueprintName = "DEV"
             ReferencedContainer = "container:todolist.xcodeproj">
          </BuildableReference>
