--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,7 +97,11 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                               /* Skip type checking all .d.ts files. */
+    
+    /* Experimental Options */
+    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
+    "emitDecoratorMetadata": true         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
     "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"
