--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "tsyringe": "^4.6.0"
   },
@@ -37,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
