--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:dev": "react-native run-android --variant=devDebug --appIdSuffix=dev",
+    "android:prod": "react-native run-android --variant=prodDebug",
     "ios": "react-native run-ios",
+    "ios:dev": "react-native run-ios --scheme DEV",
+    "ios:prod": "react-native run-ios --scheme PROD",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
